update functionality added

--- a/manifests/Default-Manifest.yaml
+++ b/manifests/Default-Manifest.yaml
@@ -52,6 +52,9 @@ spec:
           successThreshold: 1
           failureThreshold: 6
           initialDelaySeconds: 20
+        env:
+        - name: JAVA_OPTS
+          value: -Xms128m -Xmx128m -Dspring.profiles.active=cloud
         resources:
           limits:
             memory: 256Mi
